[gd_scene load_steps=3 format=3 uid="uid://c8788unyd10if"]

[ext_resource type="FontFile" uid="uid://loxwahfvyn5h" path="res://src/assets/monogram.ttf" id="1_7m84b"]
[ext_resource type="Script" path="res://src/scenes/ui/main_menu.gd" id="1_047y5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_047y5")

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/normal_font = ExtResource("1_7m84b")
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/italics_font_size = 20
bbcode_enabled = true
text = "[i][shake]Grab as many itens as you can, escape in time by the door!


mouse click -> grab itens
w a s d -> move the player[/shake][/i]"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="TitleBox" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/TitleBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="ButtonsBox" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox"]
layout_mode = 2

[node name="StartButton" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/StartButton"]
layout_mode = 2

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/StartButton/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="Btn" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/StartButton/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="ScoreBoardButton" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/ScoreBoardButton"]
layout_mode = 2

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/ScoreBoardButton/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="Btn" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/ScoreBoardButton/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = "Scoreboard"

[node name="QuitButton" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/QuitButton"]
layout_mode = 2

[node name="Selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/QuitButton/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = ">"

[node name="Btn" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/ButtonsBox/VBoxContainer/QuitButton/HBoxContainer"]
custom_minimum_size = Vector2(83, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7m84b")
theme_override_font_sizes/font_size = 32
text = "Quit"
